<resources>
    <string name="app_name">KinAni</string>
    <string name="app_title">KinAni</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="trending">Trending</string>
    <string name="recommendations">Recommendations</string>
    <string name="search_anime">Search Anime/Drama</string>
    <string name="speech_not_supported">Unknown Language</string>
    <string name="speech_prompt">search</string>
    <string name="recentlyAired">Recently Aired</string>
    <string name="home">Home</string>
    <string name="new_label">New</string>
    <string name="drama">KShow</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="movies">Movies</string>
    <string name="about_anime">About</string>
    <string name="genre">Genre</string>
    <string name="anime_rating">Rating</string>
    <string name="status">Status</string>
    <string name="username">User</string>
    <string name="enter_username">Enter alias</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="release">Release</string>
    <string name="qualityFour">1080p</string>
    <string name="qualityThree">720p</string>
    <string name="qualityTwo">480p</string>
    <string name="qualityOne">360p</string>
    <string name="quality_selector">Select Quality</string>
    <string name="none">none</string>
    <string name="error_alert">Oops! Content Not Found, Please click Retry..</string>
    <string name="retry">Retry</string>
    <string name="more">more</string>
    <string name="signup"><u>Sign Up </u></string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="password_again">Repeat Password</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Other">Other</string>
    <string name="hopin">Hop In!</string>
    <string name="watchlist">Watchlist</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="trendingDrama">Trending</string>
    <string name="top_shows">Top Shows</string>
    <string name="clear">clear</string>
    <string name="anonymous">Anonymous</string>
    <string name="back">back</string>
    <string name="voice_search">voice_search</string>
    <string name="about_app">About</string>
    <string name="log_out">Log Out</string>
    <string name="change_icon">Change Icon</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy">Privacy Policy</string>
    <string name="Notification">Notifications</string>
    <string name="issue">Report Issue</string>
    <string name="select_an_icon">Select An Icon</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">topic of issue</string>
    <string name="issue_title">content(anime/drama) title</string>
    <string name="issue_name">Title</string>
    <string name="issue_message">Message</string>
    <string name="message_value">Type a message here..</string>
    <string name="send">Send</string>
    <string name="contact_form">Report</string>
    <string name="reload">Reload</string>
    <string name="triviaKnow">I Know</string>
    <string name="trivia_unknown">See Answer</string>
    <string name="do_you_know">Do you know?</string>
    <string name="watch_now">Watch Now</string>
    <string name="alreadyKnow">Excellent, keep surfing !!</string>
    <string name="agree">I Agree</string>
    <string name="termsAndConditions"> KinAni is a free to use app. The app is developed by PyPisan for free to use and the content of the app is not owned by the developer.\n\nThis page is used to inform the visitors regarding the policies with the collection, use and disclosure of personal information, if anyone wish to use this app. \n\nIf you click agree to this terms and conditions, you agree to the collection and use of the information in relation to this policy. The basic information this app collects is used for providing and improving the service. Your information is secure and will not be shared to anyone expect as described in the privacy policy.\n\nThe terms used here, have the same meanings as in our \'Terms and Conditions\', which will be accessible at when you signup for an account in this app otherwise it will applicable as defined here.\n\nThe app contains third-party services that may collect information used to identify you.\n\nThe basic information will be collected when clicking \'I Agree\' for user service enhancement.\n\nThis is an open source app and the code is available on Github.\n\nIf you wish to continue click \'I Agree\'.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Are you sure want to delete your account ?</string>
    <string name="getPassword">Get Password</string>
    <string name="search_drama">Search Drama</string>
    <string name="auto_play_on">Auto-play is on</string>
    <string name="auto_play_off">Auto-play is off</string>
    <string name="quality">Quality</string>
    <string name="download">Save Video</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="lock_screen">Lock screen</string>
    <string name="current_quality">"Quality for current video •"</string>
    <string name="_1080">1080p</string>
    <string name="_720">720p</string>
    <string name="_480">480p</string>
    <string name="_360">360p</string>
    <string name="decrease">decrease</string>
    <string name="increase">increase</string>
    <string name="saved_videos">Saved Videos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">play</string>
</resources>