<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/home_icon" />
    <item
        android:id="@+id/newRelease"
        android:title="@string/new_label"
        android:icon="@drawable/recently_icon"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/movies"
        android:title="@string/movies"
        app:showAsAction="ifRoom"
        android:icon="@drawable/movies_icon"/>
    <item
        android:id="@+id/liked"
        android:title="@string/liked"
        android:icon="@drawable/liked_icon"
        app:showAsAction="ifRoom"/>


</menu>