<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/current_quality"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/_1080"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/click_effect_round"
        />
    <TextView
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/_720"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/click_effect_round"
        />
    <TextView
        android:id="@+id/avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/_480"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/click_effect_round"
        />
    <TextView
        android:id="@+id/low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/_360"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/click_effect_round"
        />

</LinearLayout>