<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/quality_selector"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/qualityOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="@drawable/quality_radio_button"
            android:paddingStart="20dip"
            android:paddingEnd="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/qualityOne" />

        <RadioButton android:id="@+id/qualityTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualityTwo"
            android:button="@null"
            android:drawableEnd="@drawable/quality_radio_button"
            android:paddingStart="20dip"
            android:paddingEnd="10dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/qualityThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualityThree"
            android:button="@null"
            android:checked="true"
            android:drawableEnd="@drawable/quality_radio_button"
            android:paddingStart="20dip"
            android:paddingEnd="10dp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/qualityFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualityFour"
            android:button="@null"
            android:drawableEnd="@drawable/quality_radio_button"
            android:paddingStart="20dip"
            android:paddingEnd="10dp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</LinearLayout>