<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/updateLoader"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/grid_linear_layout"
        android:layout_width="350dp"
        android:layout_height="620dp"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/select_an_icon"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="22sp" />
    <GridView
        android:id="@+id/grid_icon_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:numColumns="3"
        android:verticalSpacing="10dp"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelUserIconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:elevation="6dp"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:focusable="true"
            android:clickable="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/issueBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/contact_form"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/subject"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_subject"
            android:autofillHints="username"
            android:singleLine="true"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:background="@drawable/round_layout_user"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/issue_name"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/issue_title"
            android:autofillHints="name"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:padding="8dp"
            android:background="@drawable/round_layout_user"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/issue_message"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/message_value"
            android:autofillHints="name"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="3"
            android:maxLines="5"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:gravity="start|top"
            android:background="@drawable/round_layout_user"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/send"
                android:focusable="true"
                android:clickable="true"
                android:layout_weight="1"
                android:backgroundTint="@color/cardBackground"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelIssueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/cancel"
                android:focusable="true"
                android:clickable="true"
                android:layout_weight="1"
                android:backgroundTint="@color/cardBackground"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="21sp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/yes"
            android:focusable="true"
            android:clickable="true"
            android:layout_weight="1"
            android:backgroundTint="@color/cardBackground"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/no"
            android:focusable="true"
            android:clickable="true"
            android:layout_weight="1"
            android:backgroundTint="@color/cardBackground"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>


</LinearLayout>