<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

        <ProgressBar
            android:id="@+id/loginLoader"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            />

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/username"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_username"
            android:autofillHints="username"
            android:singleLine="true"
            android:inputType="textEmailAddress" />
        <TextView
            android:id="@+id/lbl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/password"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginStart="9dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:focusable="true"
            android:textSize="18sp"
            android:background="?android:selectableItemBackground"
            />

        <TextView
            android:id="@+id/lbl_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginStart="9dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup"
            android:clickable="true"
            android:focusable="true"
            android:textSize="18sp"
            android:background="?android:selectableItemBackground"
            />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login"
            android:focusable="true"
            android:clickable="true"
            />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/cancel"
                android:focusable="true"
                android:clickable="true"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/username"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_username"
            android:autofillHints="username"
            android:singleLine="true"
            android:inputType="textEmailAddress" />
        <TextView
            android:id="@+id/lbl_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/password"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/lbl_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/password_again"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_password_again"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/lbl_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="9dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/age"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:inputType="number"
            android:singleLine="true"
            android:autofillHints="18" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Other"/>
        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/hopin"
                android:focusable="true"
                android:clickable="true"
                />
            <Button
                android:id="@+id/cancelButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/cancel"
                android:focusable="true"
                android:clickable="true"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</LinearLayout>